--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,6 +8,14 @@
 </ion-header>
 
 <ion-content>
+
+<ion-item>
+  <ion-label>This will be a list of all this user's Interactions</ion-label>
+</ion-item>
+
+  <ion-button expand="full" (click)="openNewInteractionPage()">
+    <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+  </ion-button>
   
 
 </ion-content>
