--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,12 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Log In</ion-title>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Login</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="signUp()">Sign Up</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+<form [formGroup]="new_user_form" (submit)="login(new_user_form.value)">
+  <ion-item>
+    <ion-label color="primary" position="floating">Email</ion-label>
+    <ion-input type="email" formControlName="email" required></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label color="primary" position="floating">Password</ion-label>
+    <ion-input type="password" formControlName="password" required></ion-input>
+  </ion-item>
+  <ion-button class="submit-btn" expand="block" type="submit" [disabled]="!new_user_form.valid">Login</ion-button>
+</form>
+  <ion-button class="submit-btn" expand="block" (click)="loginGoogle()">Google Login</ion-button>
 </ion-content>
