Finish Front End organization

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -8,5 +8,40 @@
 </ion-header>
 
 <ion-content>
+<ion-item>
+  <!-- <ion-item> -->
+    <ion-label color = "primary" position = "stacked">Proprietor: Johnny DiCristo</ion-label>
+  <!-- </ion-item> -->
+  
+  <ion-img [src]="jimg" style="width: 200px; height: 400px;"></ion-img>
+  <ion-textarea readonly>Johnny DiCristo; 
+    Born and raised in Charlotte, North Carolina. Current Undergrad student at the University of South Carolina studying Pre-Med and Exercise Science.
+    All business operations and ownership will run through Johnny. </ion-textarea>
+</ion-item>
+
+<ion-item>
+  <!-- <ion-item> -->
+    <ion-label color = "primary" position = "stacked">Business Consultant: Tommy Hammett</ion-label>
+  <!-- </ion-item> -->
+  <ion-img [src]="timg" style="width: 200px; height: 400px;"></ion-img>
+  <ion-textarea readonly>Tommy Hammett; 
+    Born and raised outside of Philadelphia, PA. Currently a junior at the University of South Carolina studying International Business and Finance. 
+    Contact Tommy regarding business inquiries via email at twh2@email.sc.edu or at (484)-883-6546
+</ion-textarea>
+
+</ion-item>
+
+<ion-item>
+  <!-- <ion-item> -->
+    <ion-label color = "primary" position = "stacked"> Lead Developer: Luis Baez</ion-label>
+  <!-- </ion-item> -->
+  
+  <ion-img [src]="limg" style="width: 200px; height: 400px;"></ion-img>
+  <ion-textarea readonly>Luis Baez; 
+    Born and raised in Myrlte Beach, South Carolina. Currently pursueing a Masters at the University of South Carolina in Computer Science. 
+    Contact Luis regarding Technical Concerns and Application Integration requests via email at lbaez@email.sc.edu.
+</ion-textarea>
+
+</ion-item>
 
 </ion-content>
