--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -8,5 +8,28 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-list lines="full">
+    <ion-list>
+      <ion-item-sliding>
+        <ion-item>Slide For Light Mode</ion-item>
+        <ion-item-options side="end">
+          <ion-item-option color="warning" expandable (click) = "enableLight()">
+            <ion-icon name="sunny"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+      <ion-item-sliding>
+        <ion-item>Slide For Dark Mode</ion-item>
+        <ion-item-options side="end">
+          <ion-item-option color="tertiary" expandable (click) = "enableDark()">
+            <ion-icon name="moon"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+      <!-- <ion-header>Need to update some settings?</ion-header> -->
+      <ion-button expand="block" (click)="updateUserSettings()">Update User Info</ion-button>
+      <ion-button expand="block" (click)="logout()">Logout</ion-button>
+      <ion-button expand="block" (click)="PopUp()">Delete User Profile</ion-button>
+    </ion-list>
+  </ion-list>
 </ion-content>
