July 30th ready for firebase

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -10,7 +10,7 @@
 <ion-content>
 <ion-item>
   <!-- <ion-item> -->
-    <ion-label color = "primary" position = "stacked">Proprietor: Johnny DiCristo</ion-label>
+    <ion-label color = "primary" position = "floating" class="ion-text-wrap">Proprietor: Johnny DiCristo</ion-label>
   <!-- </ion-item> -->
   
   <ion-img [src]="jimg" style="width: 200px; height: 400px;"></ion-img>
@@ -21,7 +21,7 @@
 
 <ion-item>
   <!-- <ion-item> -->
-    <ion-label color = "primary" position = "stacked">Business Consultant: Tommy Hammett</ion-label>
+    <ion-label color = "primary" position = "floating" class="ion-text-wrap">Business Consultant: Tommy Hammett</ion-label>
   <!-- </ion-item> -->
   <ion-img [src]="timg" style="width: 200px; height: 400px;"></ion-img>
   <ion-textarea readonly>Tommy Hammett; 
@@ -33,7 +33,7 @@
 
 <ion-item>
   <!-- <ion-item> -->
-    <ion-label color = "primary" position = "stacked"> Lead Developer: Luis Baez</ion-label>
+    <ion-label color = "primary" position = "floating" class="ion-text-wrap"> Lead Developer: Luis Baez</ion-label>
   <!-- </ion-item> -->
   
   <ion-img [src]="limg" style="width: 200px; height: 400px;"></ion-img>
