--- a/src/app/pages/emergency/emergency.page.html
+++ b/src/app/pages/emergency/emergency.page.html
@@ -8,4 +8,9 @@
 </ion-header>
 <ion-content>
 
+  <ion-item>
+    <ion-label class="ion-text-wrap"> If you are currently having thoughts of suicide, please immediately call the National Suicide Prevention Hotline:</ion-label>
+    <ion-label href="tel:+1-800-273-8255" class="button button-positive"> 1-800-273-8255 </ion-label>
+  </ion-item>
+
 </ion-content>
