--- a/src/app/pages/emergency/emergency.page.html
+++ b/src/app/pages/emergency/emergency.page.html
@@ -13,4 +13,11 @@
     <ion-label href="tel:+1-800-273-8255" class="button button-positive"> 1-800-273-8255 </ion-label>
   </ion-item>
 
+  <ion-item>
+  <ion-label> If you are experiencing an Immediate Emergency, please call 911 Emergency Services!</ion-label>
+    <ion-fab slot = "fixed">
+      <ion-fab-button>Call 911</ion-fab-button>
+    </ion-fab>
+  </ion-item>
+
 </ion-content>
