Wednesday Sept 2nd

--- a/src/app/pages/emergency/emergency.page.html
+++ b/src/app/pages/emergency/emergency.page.html
@@ -14,7 +14,7 @@
   </ion-item>
 
   <ion-item>
-  <ion-label> If you are experiencing an Immediate Emergency, please call 911 Emergency Services!</ion-label>
+  <ion-textarea readonly> If you are experiencing an Immediate Emergency, please call 911 Emergency Services!</ion-textarea>
     <ion-fab slot = "fixed">
       <ion-fab-button>Call 911</ion-fab-button>
     </ion-fab>
