--- a/src/app/pages/routine/routine.page.html
+++ b/src/app/pages/routine/routine.page.html
@@ -15,9 +15,10 @@
 
   <ion-item>
     <ion-label>This will be a list of all this user's Interactions</ion-label>
-    <ion-button expand="full" (click)="openNewRoutinePage()">
-      <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-    </ion-button>
   </ion-item>
+
+    <ion-button expand="full" (click)="openNewRoutinePage()">
+      <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+    </ion-button>
 
 </ion-content>
