--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -1,9 +1,71 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>details</ion-title>
+    <ion-buttons slot = "start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot = "end">
+      <ion-button (click)="deleteInteraction()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>{{ curr_int.date }} Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" pullFactor="0.5" pullMin="100" pullMax="200" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-down"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
+  <ion-list>
+    
+    <ion-item>
+      <ion-label color="primary">Date: {{ curr_int.date }}</ion-label> 
+    </ion-item>
+
+    <ion-item>
+      <ion-label color="primary">Time: {{ curr_int.time }}</ion-label> 
+    </ion-item>
+    
+    <ion-item>
+      <ion-label color="primary">location: {{ curr_int.location }}</ion-label> 
+    </ion-item>
+    
+    <ion-item>
+      <ion-label color="primary" >Topic: {{ curr_int.topic }}</ion-label> 
+    </ion-item>
+    
+    <ion-item>
+      <!-- <ion-label color="secondary">Key Words: {{ curr_int.date }}</ion-label>  -->
+      <ion-label color="secondary" position = "stacked">Key Words:</ion-label>
+      <ion-input [(ngModel)]="curr_int.words" readonly></ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label color="secondary" >Tone: {{ curr_int.tone }}</ion-label> 
+    </ion-item>
+    
+    <ion-item>
+      <!-- <ion-label>Date: {{ curr_int.date }}</ion-label> -->
+      <ion-label color="primary" position = "stacked">How did this interaction make you feel? </ion-label>
+      <ion-textarea> {{ curr_int.feel }} </ion-textarea>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label color="primary" position = "stacked">What went well within this interaction? </ion-label>
+      <ion-textarea> {{ curr_int.pros }}</ion-textarea>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label color="primary" position = "stacked">If anything, what do you wish went differently?</ion-label>
+      <ion-textarea> {{ curr_int.edit }}</ion-textarea>
+    </ion-item>
+
+
+  </ion-list>
 
 </ion-content>
