--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,11 +13,27 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" pullFactor="0.5" pullMin="100" pullMax="200" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-down"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
 
 <ion-item>
-  <ion-label>This will be a list of all this user's Interactions</ion-label>
+  <ion-label color = "dark" >Recent Interactions: </ion-label>
 </ion-item>
+<ion-list>
+  <ion-item *ngFor="let interaction of interactions" (click)="goToInteraction(interaction)">
+    <ion-label>
+      {{interaction.date}}
+    </ion-label>
+      {{interaction.location}}
+  </ion-item>
 
+</ion-list>
   <ion-button expand="full" (click)="openNewInteractionPage()">
     <ion-icon slot="icon-only" name="add-circle"></ion-icon>
   </ion-button>
