--- a/src/app/pages/newlog/newlog.page.html
+++ b/src/app/pages/newlog/newlog.page.html
@@ -15,13 +15,18 @@
     </ion-item>
 
     <ion-item>
-      <ion-label color="primary" position="floating">What Time did you Wake up?</ion-label>
+      <ion-label color="primary" position="stacked">What Time did you Wake up?</ion-label>
       <ion-input type="text" formControlName="wake" required></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label color="primary" position="floating">How much did you spend today?</ion-label>
-      <ion-input type="text" formControlName="money_spent" required>$</ion-input>
+      <ion-label color="primary" position="stacked">Did you get any exercise today?</ion-label>
+      <ion-input type="text" formControlName="wake" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label color="primary" position="stacked">How much did you spend today?</ion-label>
+      <ion-input type="text" formControlName="money_spent" required position="stacked">$</ion-input>
     </ion-item>
 
     <ion-item>
