--- a/src/app/pages/routine/routine.page.html
+++ b/src/app/pages/routine/routine.page.html
@@ -9,13 +9,24 @@
 
 
 <ion-content>
+  <ion-refresher slot="fixed" pullFactor="0.5" pullMin="100" pullMax="200" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-down"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-item>
-    <ion-label>Recent Routines:</ion-label>
+    <ion-label color = "dark">Recent Routines:</ion-label>
   </ion-item>
-
-  <ion-item>
-    <ion-label>This will be a list of all this user's Interactions</ion-label>
-  </ion-item>
+  <ion-list>
+    <ion-item *ngFor ="let routine of routines" (click)="goToRoutine(routine)">
+      <ion-label  color = "primary">
+        {{routine.date}}
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
     <ion-button expand="full" (click)="openNewRoutinePage()">
       <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
