--- a/src/app/pages/emergency/emergency.page.html
+++ b/src/app/pages/emergency/emergency.page.html
@@ -1,3 +1,53 @@
+<ion-menu side="start" menuId="first" contentId="main">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Interpersonal Therapy</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+
+      <ion-list-header>Welcome,{{ current_username }}! </ion-list-header>
+
+      <ion-item>
+        <ion-button fill = "clear"(click)="toInteractions()">
+          <!-- <ion-icon name = "leaf">Interactions</ion-icon> -->
+          Interactions
+        </ion-button>
+      </ion-item>
+
+      <ion-item>
+        <ion-button fill = "clear" (click)="toRoutine()">Routine Log</ion-button>
+      </ion-item>
+
+      <ion-item>
+        <ion-button fill = "clear" (click)="toMessages()">Messages</ion-button>
+      </ion-item>
+
+      <ion-item>
+        <ion-button fill = "clear" (click)="toAccInfo()">Account Information</ion-button>
+      </ion-item>
+
+      <ion-item>
+        <ion-button fill = "clear" (click)="toAbout()">About</ion-button>
+      </ion-item>
+      
+      <ion-item>
+        <ion-button fill = "clear" (click)="toSettings()">Settings</ion-button>
+      </ion-item>
+
+      <ion-item>
+        <ion-button fill = "clear" (click)="toEmergency()">Emergency</ion-button>
+      </ion-item>
+
+
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-router-outlet id="main"></ion-router-outlet>
+
+<!--  -->
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
