--- a/src/app/pages/start/start.page.html
+++ b/src/app/pages/start/start.page.html
@@ -4,6 +4,10 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-card class = "welcome-card">
+  <img src="/assets/icon/icon.png">
+</ion-card>
+
 <ion-content>
   <ion-item>
     <ion-label text-center> Select Channel</ion-label>
