--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -95,3 +95,10 @@
 </ion-item>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button color = "medium" expand="full" (click)="toLauncher()"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
+  </ion-toolbar>
+</ion-footer>
+
