--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -64,3 +64,10 @@
 
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button color = "medium" expand="full" (click)="toLauncher()"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
+  </ion-toolbar>
+</ion-footer>
+
