--- a/src/app/pages/emergency/emergency.page.html
+++ b/src/app/pages/emergency/emergency.page.html
@@ -71,3 +71,9 @@
   </ion-item>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button color = "medium" expand="full" (click)="toLauncher()"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
+  </ion-toolbar>
+</ion-footer>
