--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -93,6 +93,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button color = "medium" expand="full" (click)="toLauncher"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
+    <ion-button color = "medium" expand="full" (click)="toLauncher()"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-footer>
