--- a/src/app/pages/routine/routine.page.html
+++ b/src/app/pages/routine/routine.page.html
@@ -83,3 +83,9 @@
     </ion-button>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button color = "medium" expand="full" (click)="toLauncher()"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
+  </ion-toolbar>
+</ion-footer>
