--- a/src/app/pages/sms/sms.page.html
+++ b/src/app/pages/sms/sms.page.html
@@ -60,3 +60,10 @@
 <ion-content>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-button color = "medium" expand="full" (click)="toLauncher()"><ion-icon slot ="icon-only" name="apps"></ion-icon></ion-button>
+  </ion-toolbar>
+</ion-footer>
+
