Partial push, Formatting

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -59,7 +59,7 @@
 
 <ion-content>
 
-  <ion-button expand="block" (click)="openLoginPage()"> Login </ion-button>
+  <ion-button expand="block" (click)="openInfoPage()"> Set Information </ion-button>
 
 
 
