--- a/src/app/pages/start/start.page.html
+++ b/src/app/pages/start/start.page.html
@@ -8,14 +8,28 @@
   <img src="/assets/icon/icon.png">
 </ion-card>
 
-<ion-content>
-  <ion-item>
-    <ion-label text-center> Select Channel</ion-label>
+<ion-content padding class = "flabel">
+  <ion-item lines="none" style="text-align: center;">
+    <ion-label> Select Channel</ion-label>
   </ion-item>
 
-  <ion-item>
-    <ion-button size = "default" expand = "full" class="ion-text-wrap" (click) = "goToLogin()">Client   </ion-button>
-    <ion-button  size = "default" expand = "full" class="ion-text-wrap" (click) = "goToDocLogin()">Therapist</ion-button>
-  </ion-item>
+<ion-footer class = "ion-no-border">
+  <ion-toolbar>
+    <ion-grid [fixed] = "true">
+      <ion-row>
+        <ion-col>
+          <ion-button size = "default" expand = "full" shape = "round" class="ion-text-wrap" 
+          (click) = "goToLogin()">Client   </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button size = "default" expand = "full" shape = "round" class="ion-text-wrap" 
+          (click) = "goToDocLogin()">Therapist</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+      
+  </ion-toolbar>
+</ion-footer>
+
 
 </ion-content>
